# ARGLy

./: .gitignore  Makefile  README.md
src/: argly_cli.cpp  main.cpp  meson.build
src/subprojects/: tskit.wrap
src/subprojects/treellh/: meson.build  treellh.cpp  treellh.h
